# patatnik

./: .gitignore  AGENTS.md  README.md  index.html  motor_control.py  pyproject.toml  setup_datasets.sh
.github/workflows/: build-gpu-image.yml  deploy-pages.yml
CICD/tools/: wait-new-gpu.sh
EfficientAD/: download_data.ps1  efficientad.py  load_pretrained.py  setup_datasets.py
OpenCV/: camera.py  yolo_stream.py
embedded/: camera_server.py  gps_latlon.py  gps_uart_raw.py  main.py  motor_control.py  orchestrator.py  orchestrator.py.bak  ppo_rover.py  ppo_sb3.zip.bak  ppo_weights.npz  send_request.py  train.py  ultrasonic_distance.py  vision.py  vision.py.bak  wasd_control.py
embedded/api/: __init__.py  rover_api.py
embedded/drivers/: __init__.py
embedded/random_tests/: test_picam2.py  wasd_control.py
knowledge/: app.py  main.py  openclip_rag.py  requirements.txt  smoke_test.py
models/: README.md
patatnikClient/patatnikClient/: ContentView.swift  patatnikClientApp.swift
patatnikClient/patatnikClient.xcodeproj/: project.pbxproj
plant_pipeline/: requirements.txt
plant_pipeline/anomaly/: __init__.py  base.py  bundle.py  calibration.py  dataset.py
plant_pipeline/api/: batch2_api.py
rl/: .gitignore  agricultural_rover_env.py  agricultural_tank_base.xml  field_sac_env.py  maze_sac_env.py  orchard_sac_env.py  requirements.txt  run.py  segment_video.py  tank_car.xacro  tank_sac_env.py  test_model.py  train_farm_ppo.py  train_sac.py  train_sweep.py  visualize_rover.py  wheat_farm.py  wheat_farm_env.py
server/: .gitignore  pom.xml
(+110 files in other folders)
